--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -106,6 +106,8 @@
 
 .xref:ic-spec:index.adoc[Interface specifications]
 ** xref:ic-spec:about-the-spec.adoc[About the specification]
+** xref:ic-spec:intro-canisters.adoc[Introduction to key interfaces]
+** xref:ic-spec:index.adoc[{IC} external interfaces]
 
 .xref:release-notes:sdk-release-notes.adoc[Release notes]
 ** xref:release-notes:0.6.23-rn.adoc[0.6.23]
